# zdownload

./: Cargo.toml  Dioxus.toml  README.md  package-lock.json
assets/: icon.icns  tailwind.css
src/: db.rs  main.rs  page.rs
src/page/: home.rs  setting.rs
