[package]
name = "zdownload"
version = "0.1.0"
authors = ["LiorisCode <2782226338@qq.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.0", features = [] }
dirs-next = "2.0.0"
regex = "1.11.1"
rfd = "0.15.3"
rusqlite = "0.35.0"
serde = "1.0.219"
serde_json = "1.0.140"
tokio = "1.45.1"

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
